data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1086.wast
;; 7. **Test for traps after a continuation with `br_if`:**    - Use `br_if` to conditionally skip `unreachable` instructions and verify this results in proper reachable code execution.    - **Constraint:** Validates correct implementation of conditionally executed traps.    - **Related to**: Checks for misinterpretations in conditional branching commands nuanced by unreachable scenarios.

(assert_invalid
  (module (func $br_if_skip_unreachable (result i32)
    (block (result i32)
      (br_if 0 (i32.const 1))
      (unreachable)
    )
    (i32.const 42)
  ))
  "type mismatch"
)